Port PipelineOptionsFactory from Guava Function to java.lang.function.Function